<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_270sdp"
    android:layout_gravity="center|top"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_70sdp"
        android:background="@drawable/rectangle_stroke">

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_light"
                android:maxLines="1"
                android:text="@string/pokemon_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_light"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="1"
            android:text="@string/pokemon_category"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_130sdp"
            android:layout_marginStart="@dimen/_10sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_light"
                android:maxLines="1"
                android:text="@string/pokemon_attack"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_160sdp"
            android:layout_marginStart="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="1"
            android:text="@string/pokemon_defense"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/favorite_icon_desc"
            android:src="@drawable/ic_favorite"
            app:tint="@color/Myred"
            android:layout_marginStart="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_160sdp"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:contentDescription="@string/pokemon_photo_desc" />
</RelativeLayout>